feat(bot): details

--- a/src/chart.html
+++ b/src/chart.html
@@ -2,565 +2,136 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Chart</title>
-    <style>
-        html,
-        body,
-        #myChart {
-            width: 100%;
-            height: 100%;
-        }
-    </style>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>Chart</title>
+  <style>
+    html,
+    body,
+    #myChart {
+      width: 100%;
+      height: 100%;
+    }
+  </style>
 </head>
 
 <body>
-    <canvas id="myChart"></canvas>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.4.0/Chart.min.js"></script>
-    <script>
-        const points = []
-        const rawPoints = [ { lastPrice: undefined,
-            price: 9500,
-            lastTrend: undefined,
-            trend: null,
-            time: 0 },
-          { lastPrice: 9500,
-            price: 9500,
-            lastTrend: null,
-            trend: 2,
-            time: 1000 },
-          { lastPrice: 9500,
-            price: 9500,
-            lastTrend: 2,
-            trend: 2,
-            time: 2000 },
-          { lastPrice: 9500,
-            price: 9500,
-            lastTrend: 2,
-            trend: 2,
-            time: 3000 },
-          { lastPrice: 9500,
-            price: 9500,
-            lastTrend: 2,
-            trend: 2,
-            time: 4000 },
-          { lastPrice: 9500,
-            price: 9499.99,
-            lastTrend: 2,
-            trend: 1,
-            time: 5000 },
-          { lastPrice: 9499.99,
-            price: 9499.99,
-            lastTrend: 1,
-            trend: 2,
-            time: 6000 },
-          { lastPrice: 9499.99,
-            price: 9499.99,
-            lastTrend: 2,
-            trend: 2,
-            time: 7000 },
-          { lastPrice: 9499.99,
-            price: 9499.99,
-            lastTrend: 2,
-            trend: 2,
-            time: 8000 },
-          { lastPrice: 9499.99,
-            price: 9499.99,
-            lastTrend: 2,
-            trend: 2,
-            time: 9000 },
-          { lastPrice: 9499.99,
-            price: 9499.99,
-            lastTrend: 2,
-            trend: 2,
-            time: 10000 },
-          { lastPrice: 9499.99,
-            price: 9499.99,
-            lastTrend: 2,
-            trend: 2,
-            time: 11000 },
-          { lastPrice: 9499.99,
-            price: 9499.99,
-            lastTrend: 2,
-            trend: 2,
-            time: 12000 },
-          { lastPrice: 9499.99,
-            price: 9499.99,
-            lastTrend: 2,
-            trend: 2,
-            time: 13000 },
-          { lastPrice: 9499.99,
-            price: 9499.99,
-            lastTrend: 2,
-            trend: 2,
-            time: 14000 },
-          { lastPrice: 9499.99,
-            price: 9499.99,
-            lastTrend: 2,
-            trend: 2,
-            time: 15000 },
-          { lastPrice: 9499.99,
-            price: 9499.99,
-            lastTrend: 2,
-            trend: 2,
-            time: 16000 },
-          { lastPrice: 9499.99,
-            price: 9499.99,
-            lastTrend: 2,
-            trend: 2,
-            time: 17000 },
-          { lastPrice: 9499.99,
-            price: 9499.99,
-            lastTrend: 2,
-            trend: 2,
-            time: 18000 },
-          { lastPrice: 9499.99,
-            price: 9500,
-            lastTrend: 2,
-            trend: 0,
-            time: 19000 },
-          { lastPrice: 9500,
-            price: 9500,
-            lastTrend: 0,
-            trend: 2,
-            time: 20000 },
-          { lastPrice: 9500,
-            price: 9499.99,
-            lastTrend: 2,
-            trend: 1,
-            time: 21000 },
-          { lastPrice: 9499.99,
-            price: 9499.99,
-            lastTrend: 1,
-            trend: 2,
-            time: 22000 },
-          { lastPrice: 9499.99,
-            price: 9499.99,
-            lastTrend: 2,
-            trend: 2,
-            time: 23000 },
-          { lastPrice: 9499.99,
-            price: 9500,
-            lastTrend: 2,
-            trend: 0,
-            time: 24000 },
-          { lastPrice: 9500,
-            price: 9500,
-            lastTrend: 0,
-            trend: 2,
-            time: 25000 },
-          { lastPrice: 9500,
-            price: 9500,
-            lastTrend: 2,
-            trend: 2,
-            time: 26000 },
-          { lastPrice: 9500,
-            price: 9500,
-            lastTrend: 2,
-            trend: 2,
-            time: 27000 },
-          { lastPrice: 9500,
-            price: 9500,
-            lastTrend: 2,
-            trend: 2,
-            time: 28000 },
-          { lastPrice: 9500,
-            price: 9500,
-            lastTrend: 2,
-            trend: 2,
-            time: 29000 },
-          { lastPrice: 9500,
-            price: 9500,
-            lastTrend: 2,
-            trend: 2,
-            time: 30000 },
-          { lastPrice: 9500,
-            price: 9500,
-            lastTrend: 2,
-            trend: 2,
-            time: 31000 },
-          { lastPrice: 9500,
-            price: 9500,
-            lastTrend: 2,
-            trend: 2,
-            time: 32000 },
-          { lastPrice: 9500,
-            price: 9500,
-            lastTrend: 2,
-            trend: 2,
-            time: 33000 },
-          { lastPrice: 9500,
-            price: 9500,
-            lastTrend: 2,
-            trend: 2,
-            time: 34000 },
-          { lastPrice: 9500,
-            price: 9500,
-            lastTrend: 2,
-            trend: 2,
-            time: 35000 },
-          { lastPrice: 9500,
-            price: 9500,
-            lastTrend: 2,
-            trend: 2,
-            time: 36000 },
-          { lastPrice: 9500,
-            price: 9500,
-            lastTrend: 2,
-            trend: 2,
-            time: 37000 },
-          { lastPrice: 9500,
-            price: 9479.9,
-            lastTrend: 2,
-            trend: 1,
-            time: 38000 },
-          { lastPrice: 9479.9,
-            price: 9479.91,
-            lastTrend: 1,
-            trend: 0,
-            time: 39000 },
-          { lastPrice: 9479.91,
-            price: 9479.91,
-            lastTrend: 0,
-            trend: 2,
-            time: 40000 },
-          { lastPrice: 9479.91,
-            price: 9479.91,
-            lastTrend: 2,
-            trend: 2,
-            time: 41000 },
-          { lastPrice: 9479.91,
-            price: 9479.91,
-            lastTrend: 2,
-            trend: 2,
-            time: 42000 },
-          { lastPrice: 9479.91,
-            price: 9479.91,
-            lastTrend: 2,
-            trend: 2,
-            time: 43000 },
-          { lastPrice: 9479.91,
-            price: 9479.91,
-            lastTrend: 2,
-            trend: 2,
-            time: 44000 },
-          { lastPrice: 9479.91,
-            price: 9479.91,
-            lastTrend: 2,
-            trend: 2,
-            time: 45000 },
-          { lastPrice: 9479.91,
-            price: 9479.91,
-            lastTrend: 2,
-            trend: 2,
-            time: 46000 },
-          { lastPrice: 9479.91,
-            price: 9479.91,
-            lastTrend: 2,
-            trend: 2,
-            time: 47000 },
-          { lastPrice: 9479.91,
-            price: 9479.91,
-            lastTrend: 2,
-            trend: 2,
-            time: 48000 },
-          { lastPrice: 9479.91,
-            price: 9479.91,
-            lastTrend: 2,
-            trend: 2,
-            time: 49000 },
-          { lastPrice: 9479.91,
-            price: 9479.91,
-            lastTrend: 2,
-            trend: 2,
-            time: 50000 },
-          { lastPrice: 9479.91,
-            price: 9479.91,
-            lastTrend: 2,
-            trend: 2,
-            time: 51000 },
-          { lastPrice: 9479.91,
-            price: 9479.91,
-            lastTrend: 2,
-            trend: 2,
-            time: 52000 },
-          { lastPrice: 9479.91,
-            price: 9479.91,
-            lastTrend: 2,
-            trend: 2,
-            time: 53000 },
-          { lastPrice: 9479.91,
-            price: 9479.91,
-            lastTrend: 2,
-            trend: 2,
-            time: 54000 },
-          { lastPrice: 9479.91,
-            price: 9479.9,
-            lastTrend: 2,
-            trend: 1,
-            time: 55000 },
-          { lastPrice: 9479.9,
-            price: 9479.9,
-            lastTrend: 1,
-            trend: 2,
-            time: 56000 },
-          { lastPrice: 9479.9,
-            price: 9479.91,
-            lastTrend: 2,
-            trend: 0,
-            time: 57000 },
-          { lastPrice: 9479.91,
-            price: 9479.91,
-            lastTrend: 0,
-            trend: 2,
-            time: 58000 },
-          { lastPrice: 9479.91,
-            price: 9479.91,
-            lastTrend: 2,
-            trend: 2,
-            time: 59000 },
-          { lastPrice: 9479.91,
-            price: 9479.91,
-            lastTrend: 2,
-            trend: 2,
-            time: 60000 },
-          { lastPrice: 9479.91,
-            price: 9479.91,
-            lastTrend: 2,
-            trend: 2,
-            time: 61000 },
-          { lastPrice: 9479.91,
-            price: 9479.91,
-            lastTrend: 2,
-            trend: 2,
-            time: 62000 },
-          { lastPrice: 9479.91,
-            price: 9479.91,
-            lastTrend: 2,
-            trend: 2,
-            time: 63000 },
-          { lastPrice: 9479.91,
-            price: 9479.91,
-            lastTrend: 2,
-            trend: 2,
-            time: 64000 },
-          { lastPrice: 9479.91,
-            price: 9479.91,
-            lastTrend: 2,
-            trend: 2,
-            time: 65000 },
-          { lastPrice: 9479.91,
-            price: 9479.87,
-            lastTrend: 2,
-            trend: 1,
-            time: 66000 },
-          { lastPrice: 9479.87,
-            price: 9479.87,
-            lastTrend: 1,
-            trend: 2,
-            time: 67000 },
-          { lastPrice: 9479.87,
-            price: 9479.87,
-            lastTrend: 2,
-            trend: 2,
-            time: 68000 },
-          { lastPrice: 9479.87,
-            price: 9473.43,
-            lastTrend: 2,
-            trend: 1,
-            time: 69000 },
-          { lastPrice: 9473.43,
-            price: 9473.43,
-            lastTrend: 1,
-            trend: 2,
-            time: 70000 },
-          { lastPrice: 9473.43,
-            price: 9467.66,
-            lastTrend: 2,
-            trend: 1,
-            time: 71000 },
-          { lastPrice: 9467.66,
-            price: 9467.68,
-            lastTrend: 1,
-            trend: 0,
-            time: 72000 },
-          { lastPrice: 9467.68,
-            price: 9467.68,
-            lastTrend: 0,
-            trend: 2,
-            time: 73000 },
-          { lastPrice: 9467.68,
-            price: 9467.68,
-            lastTrend: 2,
-            trend: 2,
-            time: 74000 },
-          { lastPrice: 9467.68,
-            price: 9467.57,
-            lastTrend: 2,
-            trend: 1,
-            time: 75000 },
-          { lastPrice: 9467.57,
-            price: 9457.06,
-            lastTrend: 1,
-            trend: 1,
-            time: 76000 },
-          { lastPrice: 9457.06,
-            price: 9457.06,
-            lastTrend: 1,
-            trend: 2,
-            time: 77000 },
-          { lastPrice: 9457.06,
-            price: 9457.06,
-            lastTrend: 2,
-            trend: 2,
-            time: 78000 },
-          { lastPrice: 9457.06,
-            price: 9457.06,
-            lastTrend: 2,
-            trend: 2,
-            time: 79000 },
-          { lastPrice: 9457.06,
-            price: 9457.54,
-            lastTrend: 2,
-            trend: 0,
-            time: 80000 },
-          { lastPrice: 9457.54,
-            price: 9457.54,
-            lastTrend: 0,
-            trend: 2,
-            time: 81000 },
-          { lastPrice: 9457.54,
-            price: 9456.72,
-            lastTrend: 2,
-            trend: 1,
-            time: 82000 },
-          { lastPrice: 9456.72,
-            price: 9456.72,
-            lastTrend: 1,
-            trend: 2,
-            time: 83000 },
-          { lastPrice: 9456.72,
-            price: 9457.29,
-            lastTrend: 2,
-            trend: 0,
-            time: 84000 },
-          { lastPrice: 9457.29,
-            price: 9457.29,
-            lastTrend: 0,
-            trend: 2,
-            time: 85000 },
-          { lastPrice: 9457.29,
-            price: 9457.29,
-            lastTrend: 2,
-            trend: 2,
-            time: 86000 },
-          { lastPrice: 9457.29,
-            price: 9457.29,
-            lastTrend: 2,
-            trend: 2,
-            time: 87000 },
-          { lastPrice: 9457.29,
-            price: 9457.29,
-            lastTrend: 2,
-            trend: 2,
-            time: 88000 },
-          { lastPrice: 9457.29,
-            price: 9457.29,
-            lastTrend: 2,
-            trend: 2,
-            time: 89000 },
-          { lastPrice: 9457.29,
-            price: 9457.29,
-            lastTrend: 2,
-            trend: 2,
-            time: 90000 },
-          { lastPrice: 9457.29,
-            price: 9457.29,
-            lastTrend: 2,
-            trend: 2,
-            time: 91000 },
-          { lastPrice: 9457.29,
-            price: 9457.29,
-            lastTrend: 2,
-            trend: 2,
-            time: 92000 },
-          { lastPrice: 9457.29,
-            price: 9457.29,
-            lastTrend: 2,
-            trend: 2,
-            time: 93000 },
-          { lastPrice: 9457.29,
-            price: 9457.29,
-            lastTrend: 2,
-            trend: 2,
-            time: 94000 },
-          { lastPrice: 9457.29,
-            price: 9457.29,
-            lastTrend: 2,
-            trend: 2,
-            time: 95000 },
-          { lastPrice: 9457.29,
-            price: 9455.3,
-            lastTrend: 2,
-            trend: 1,
-            time: 96000 },
-          { lastPrice: 9455.3,
-            price: 9455.3,
-            lastTrend: 1,
-            trend: 2,
-            time: 97000 },
-          { lastPrice: 9455.3,
-            price: 9455.3,
-            lastTrend: 2,
-            trend: 2,
-            time: 98000 },
-          { lastPrice: 9455.3,
-            price: 9455.3,
-            lastTrend: 2,
-            trend: 2,
-            time: 99000 } ]
+  <canvas id="myChart"></canvas>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.4.0/Chart.min.js"></script>
+  <script>
+    const points = []
+    const rawPoints = [{
+      lastPrice: undefined,
+      price: 9509.99,
+      lastTrend: undefined,
+      trend: null,
+      time: 0
+    },
+    {
+      lastPrice: 9509.99,
+      price: 9509.46,
+      lastTrend: null,
+      trend: 1,
+      time: 60000
+    },
+    {
+      lastPrice: 9509.46,
+      price: 9506.32,
+      lastTrend: 1,
+      trend: 1,
+      time: 120000
+    },
+    {
+      lastPrice: 9506.32,
+      price: 9490,
+      lastTrend: 1,
+      trend: 1,
+      time: 180000
+    },
+    {
+      lastPrice: 9490,
+      price: 9490,
+      lastTrend: 1,
+      trend: 2,
+      time: 240000
+    },
+    {
+      lastPrice: 9490,
+      price: 9490.01,
+      lastTrend: 2,
+      trend: 0,
+      time: 300000
+    },
+    {
+      lastPrice: 9490.01,
+      price: 9473.63,
+      lastTrend: 0,
+      trend: 1,
+      time: 360000
+    },
+    {
+      lastPrice: 9473.63,
+      price: 9473.63,
+      lastTrend: 1,
+      trend: 2,
+      time: 420000
+    },
+    {
+      lastPrice: 9473.63,
+      price: 9473.63,
+      lastTrend: 2,
+      trend: 2,
+      time: 480000
+    },
+    {
+      lastPrice: 9473.63,
+      price: 9470.11,
+      lastTrend: 2,
+      trend: 1,
+      time: 540000
+    }]
+    const trades = []
 
-        function extractPoints() {
-            rawPoints.forEach(rawPoint => {
-                points.push({
-                    time: rawPoint.time,
-                    price: rawPoint.price
-                })
-            })
-        }
+    function extractPoints() {
+      rawPoints.forEach(rawPoint => {
+        points.push({
+          time: rawPoint.time,
+          price: rawPoint.price
+        })
+      })
+    }
 
-        function drawChart() {
-            const context = document.querySelector("#myChart").getContext('2d')
-            const newChart = new Chart(context, {
-                type: 'line',
-                data: {
-                    labels: points.map(point => point.time / 1000),
-                    datasets: [
-                        {
-                            label: 'Currency Price',
-                            backgroundColor: 'rgba(255, 99, 132, .5)',
-                            borderColor: 'rgb(255, 99, 132)',
-                            data: points.map(point => point.price)
-                        },
-                        {
-                            label: 'Trades',
-                            backgroundColor: 'transparent',
-                            borderColor: 'green',
-                            data: [9500, 9600]
-                        }
-                    ]
-                }
-            })
+    function drawChart() {
+      const context = document.querySelector("#myChart").getContext('2d')
+      const newChart = new Chart(context, {
+        type: 'line',
+        data: {
+          labels: points.map(point => point.time / 1000),
+          datasets: [
+            {
+              label: 'Currency Price',
+              backgroundColor: 'rgba(255, 99, 132, .5)',
+              borderColor: 'rgb(255, 99, 132)',
+              data: points.map(point => point.price)
+            },
+            {
+              label: 'Trades',
+              backgroundColor: 'transparent',
+              borderColor: 'green',
+              data: []
+            }
+          ]
         }
+      })
+    }
 
-        window.onload = () => {
-            extractPoints()
-            console.log(points)
-            drawChart()
-        }
-    </script>
+    window.onload = () => {
+      extractPoints()
+      console.log(points)
+      drawChart()
+    }
+  </script>
 </body>
 
 </html>
