--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
         return total
       }, 0)
 
-      $benefits.innerHTML = `${benefits.toLocaleString()}€`
+      $benefits.innerHTML = `${benefits.toFixed(2)}€`
     }
 
     async function loadData() {
